Fail to load hunter scripts patch attempt

--- a/Data0/data/game.ini
+++ b/Data0/data/game.ini
@@ -1,5 +1,3 @@
-// see $/src/engine/game/gameini_parser.h file for reference
-
 sub main()
 {
 	GameClassName("GameDI");
@@ -7,7 +5,7 @@ sub main()
 	GameDLL("gamedll");
 	Locale("En");
 	// FastInitializePDB();
-	GameName("Dying Light");
+	GameName("Dying Light Emended");
 	GameExeCoreName("DyingLight");
 	TitleId("5752083F");
 	AppId(239140);
@@ -39,12 +37,12 @@ sub main()
 			ServiceId("UP0001-BLUS30795_00");
 		}
 	}
-    
+
     SkuOverride("DURANGO_JP")
     {
         LowViolence(1);
     }
-    
+
     SkuOverride("ORBIS_JP")
     {
         LowViolence(1);
